silly-demo/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: silly-demo
    actions.github.com/name: functional-tests
  name: silly-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: silly-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: silly-demo
        actions.github.com/name: functional-tests
    spec:
      shareProcessNamespace: true
      containers:
        - image: ghcr.io/vfarcic/silly-demo:1.4.171
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          name: silly-demo
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
